--- a/machine-learning/Keras - Tutorial 1.ipynb
+++ b/machine-learning/Keras - Tutorial 1.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -190,11 +190,11 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_110 (Dense)            (None, 16)                32        \n",
+      "dense_113 (Dense)            (None, 16)                32        \n",
       "_________________________________________________________________\n",
-      "dense_111 (Dense)            (None, 32)                544       \n",
+      "dense_114 (Dense)            (None, 32)                544       \n",
       "_________________________________________________________________\n",
-      "dense_112 (Dense)            (None, 2)                 66        \n",
+      "dense_115 (Dense)            (None, 2)                 66        \n",
       "=================================================================\n",
       "Total params: 642\n",
       "Trainable params: 642\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {
     "scrolled": true
    },
@@ -228,21 +228,31 @@
      "output_type": "stream",
      "text": [
       "Train on 6480 samples, validate on 1620 samples\n",
-      "Epoch 1/20\n",
-      "6480/6480 [==============================] - 3s 530us/step - loss: 0.3361 - acc: 0.8519 - val_loss: 0.0933 - val_acc: 0.9815\n",
-      "Epoch 2/20\n",
-      "6480/6480 [==============================] - 2s 362us/step - loss: 0.1371 - acc: 0.9747 - val_loss: 0.0610 - val_acc: 0.9907\n",
-      "Epoch 3/20\n",
-      "6480/6480 [==============================] - 2s 362us/step - loss: 0.1268 - acc: 0.9764 - val_loss: 0.0545 - val_acc: 0.9815\n",
-      "Epoch 4/20\n",
-      "6480/6480 [==============================] - 2s 363us/step - loss: 0.1232 - acc: 0.9772 - val_loss: 0.0501 - val_acc: 0.9907\n",
-      "Epoch 5/20\n",
-      "6040/6480 [==========================>...] - ETA: 0s - loss: 0.1197 - acc: 0.9776"
+      "Epoch 1/5\n",
+      "6480/6480 [==============================] - 3s 537us/step - loss: 0.3580 - acc: 0.8647 - val_loss: 0.1164 - val_acc: 0.9907\n",
+      "Epoch 2/5\n",
+      "6480/6480 [==============================] - 2s 370us/step - loss: 0.1456 - acc: 0.9705 - val_loss: 0.0726 - val_acc: 0.9815\n",
+      "Epoch 3/5\n",
+      "6480/6480 [==============================] - 2s 375us/step - loss: 0.1293 - acc: 0.9745 - val_loss: 0.0576 - val_acc: 0.9907\n",
+      "Epoch 4/5\n",
+      "6480/6480 [==============================] - 2s 367us/step - loss: 0.1226 - acc: 0.9769 - val_loss: 0.0519 - val_acc: 1.0000\n",
+      "Epoch 5/5\n",
+      "6480/6480 [==============================] - 2s 369us/step - loss: 0.1180 - acc: 0.9779 - val_loss: 0.0486 - val_acc: 0.9907\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1a226d6a20>"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(scaled_train_sample,train_labels,validation_split=0.2,batch_size=10,epochs=20,shuffle=True)"
+    "model.fit(scaled_train_sample,train_labels,validation_split=0.2,batch_size=10,epochs=5,shuffle=True)"
    ]
   },
   {
@@ -311,6 +321,331 @@
     "# model.compile(Adam(lr=0.001),loss='sparse_categorical_crossentropy',metrics=['accuracy'])\n",
     "\n",
     "# model.fit(scaled_train_sample,train_labels,batch_size=20,epochs=20,shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predicting using the trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_samples=[]\n",
+    "test_labels=[]\n",
+    "for i in range(100):\n",
+    "    random_younger=randint(13,64)\n",
+    "    test_samples.append(random_younger)\n",
+    "    test_labels.append(0)\n",
+    "    \n",
+    "    random_older=randint(65,100)\n",
+    "    test_samples.append(random_older)\n",
+    "    test_labels.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_samples=np.array(test_samples)\n",
+    "test_labels=np.array(test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/administrator/anaconda3/envs/py37/lib/python3.5/site-packages/sklearn/utils/validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaler = MinMaxScaler(feature_range=(0,1))\n",
+    "scaled_test_samples=scaler.fit_transform((test_samples).reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions=model.predict_classes(scaled_test_samples,verbose=0)\n",
+    "#print(predictions==test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200/200 [==============================] - 0s 67us/step\n",
+      "[0.04709168016910553, 0.995]\n"
+     ]
+    }
+   ],
+   "source": [
+    "score=model.evaluate(scaled_test_samples,test_labels)\n",
+    "print(score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving Keras Model - entirely"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.save('keras-tutorial-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "new_model=load_model('keras-tutorial-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_113 (Dense)            (None, 16)                32        \n",
+      "_________________________________________________________________\n",
+      "dense_114 (Dense)            (None, 32)                544       \n",
+      "_________________________________________________________________\n",
+      "dense_115 (Dense)            (None, 2)                 66        \n",
+      "=================================================================\n",
+      "Total params: 642\n",
+      "Trainable params: 642\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.optimizers.Adam at 0x1a2269c518>"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_model.get_weights()\n",
+    "new_model.optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200/200 [==============================] - 0s 2ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.04709168016910553, 0.995]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_model.evaluate(scaled_test_samples,test_labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving architecute of the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"class_name\": \"Sequential\", \"backend\": \"tensorflow\", \"keras_version\": \"2.1.3\", \"config\": [{\"class_name\": \"Dense\", \"config\": {\"name\": \"dense_113\", \"bias_regularizer\": null, \"activity_regularizer\": null, \"kernel_constraint\": null, \"use_bias\": true, \"kernel_regularizer\": null, \"dtype\": \"float32\", \"bias_constraint\": null, \"bias_initializer\": {\"class_name\": \"Zeros\", \"config\": {}}, \"units\": 16, \"activation\": \"relu\", \"batch_input_shape\": [null, 1], \"trainable\": true, \"kernel_initializer\": {\"class_name\": \"VarianceScaling\", \"config\": {\"mode\": \"fan_avg\", \"distribution\": \"uniform\", \"seed\": null, \"scale\": 1.0}}}}, {\"class_name\": \"Dense\", \"config\": {\"name\": \"dense_114\", \"bias_regularizer\": null, \"activity_regularizer\": null, \"kernel_constraint\": null, \"use_bias\": true, \"kernel_regularizer\": null, \"units\": 32, \"bias_initializer\": {\"class_name\": \"Zeros\", \"config\": {}}, \"bias_constraint\": null, \"activation\": \"relu\", \"trainable\": true, \"kernel_initializer\": {\"class_name\": \"VarianceScaling\", \"config\": {\"mode\": \"fan_avg\", \"distribution\": \"uniform\", \"seed\": null, \"scale\": 1.0}}}}, {\"class_name\": \"Dense\", \"config\": {\"name\": \"dense_115\", \"bias_regularizer\": null, \"activity_regularizer\": null, \"kernel_constraint\": null, \"use_bias\": true, \"kernel_regularizer\": null, \"units\": 2, \"bias_initializer\": {\"class_name\": \"Zeros\", \"config\": {}}, \"bias_constraint\": null, \"activation\": \"softmax\", \"trainable\": true, \"kernel_initializer\": {\"class_name\": \"VarianceScaling\", \"config\": {\"mode\": \"fan_avg\", \"distribution\": \"uniform\", \"seed\": null, \"scale\": 1.0}}}}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "json_string = model.to_json()\n",
+    "print(json_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_113 (Dense)            (None, 16)                32        \n",
+      "_________________________________________________________________\n",
+      "dense_114 (Dense)            (None, 32)                544       \n",
+      "_________________________________________________________________\n",
+      "dense_115 (Dense)            (None, 2)                 66        \n",
+      "=================================================================\n",
+      "Total params: 642\n",
+      "Trainable params: 642\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import model_from_json\n",
+    "model_architecture=model_from_json(json_string)\n",
+    "model_architecture.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving the weights of the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model.save_weights('keras-tutorial-1-weights')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model2=Sequential([\n",
+    "    \n",
+    "    Dense(16,input_shape=(1,), activation='relu'),\n",
+    "    Dense(32,activation='relu'),\n",
+    "    Dense(2,activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2.load_weights('keras-tutorial-1-weights')\n",
+    "model2.compile(Adam(lr=0.001),loss='sparse_categorical_crossentropy',metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200/200 [==============================] - 1s 4ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.04709168016910553, 0.995]"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.evaluate(scaled_test_samples,test_labels)"
    ]
   },
   {
